--- a/Views/Contact/Index.cshtml
+++ b/Views/Contact/Index.cshtml
@@ -1,6 +1,6 @@
-﻿﻿  <!-- Begin Main Content Area -->
+﻿  <!-- Begin Main Content Area -->
 <main class="main-content">
-    <div class="breadcrumb-area breadcrumb-height" data-bg-image="/images/breadcrumb/bg/1-1-1920x373.jpg">
+    <div class="breadcrumb-area breadcrumb-height" data-bg-image="~/assets/images/breadcrumb/bg/1-1-1920x373.jpg">
         <div class="container h-100">
             <div class="row h-100">
                 <div class="col-lg-12">
@@ -100,10 +100,10 @@
         $(document).ready(function () {
             $("#c_submit").click(function () {
                 // Lấy giá trị từ các input
-                let _name = $("#c_name").val();
-                let _phone = $("#c_phone").val();
-                let _email = $("#c_email").val();
-                let _message = $("#c_message").val();
+                 _name = $("#c_name").val();
+                 _phone = $("#c_phone").val();
+                 _email = $("#c_email").val();
+               _message = $("#c_message").val();
 
                 // Gửi dữ liệu qua AJAX
                 $.ajax({
